--- a/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
+++ b/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
@@ -1,5 +1,17 @@
 <form method="post">
     {% csrf_token %}
+    <label for="title">Book Title:</label>
+    <input type="text" name="title" id="title" required>
+    <button type="submit">Submit</button>
+</form>
+
+
+
+
+
+
+<form method="post">
+    {% csrf_token %}
     <input type="text" name="title">
     <button type="submit">Submit</button>
 </form>
